--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -1,1 +1,240 @@
 // 
+.pricing_page__btn{
+    border: none;
+    background-color: transparent;
+    a{
+        @include flex-items;
+        gap: 10px;
+        font-size: 16px;
+        color: $white-color;
+        &:hover{
+            color: $yellow-color;
+        }
+    }
+}
+.pointer{
+    letter-spacing: -5px;
+    @include flex-items;
+}
+.home_setion{
+    padding: 120px 0;
+    background-color: $tint-blue-color;
+}
+.building{
+    @include flex-items;
+    justify-content: space-between;
+    gap: 40px;
+    &_text{
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
+        max-width: 550px;
+        h1{
+            font-size: 54px;
+            line-height: 74px;
+            color: $white-color;
+        }
+        p{
+            font-size: 16px;
+            line-height: 28px;
+            color: $white-color;
+            opacity: .7;
+            margin: 24px 0 48px 0;
+        }
+    }
+    &_btns{
+        @include flex-items();
+        gap: 40px;
+    }
+    &_btn{
+        border: none;
+        background-color: transparent;
+        a{
+            color: $white-color;
+            font-size: 16px;
+        }
+        span{
+            letter-spacing: -5px;
+        }
+    }
+    &_img{
+        max-width: 630px;
+        img{
+            width: 100%;
+        }
+    }
+}
+
+
+.home_project{
+    padding: 80px 0;
+    .project{
+        @include flex-items;
+        gap: 32px;
+        width: 100%;
+        &_bigcard{
+            background-image: url(../images/home/home_Card_1.png);
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            max-width: 843px;
+            width: 100%;
+            height: 600px;
+            &__text{
+                background: linear-gradient(-40deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+                width: 405px;
+                height: 100%;
+                padding: 70px 44px;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: flex-end;
+                h3{
+                    font-size: 24px;
+                    line-height: 36px;
+                    color: $white-color;
+                }
+                p{
+                    font-size: 16px;
+                    line-height: 28px;
+                    color: $white-color;
+                    margin: 16px 0 40px 0;
+                    opacity: .8;
+                }
+            }
+        }
+        &_cards{
+            @include flex-items;
+            flex-direction: column;
+            gap: 32px;
+        }
+        &_card{
+            max-width: 405px;
+            width: 100%;
+            height: 284px;
+        }
+        &_card_one{
+            background-image: url(../images/home/home_card_2.png);
+            background-size: contain;
+            background-position: cover;
+            background-repeat: no-repeat;
+            max-width: 405px;
+            width: 100%;
+            height: 284px;
+        }
+        &_card_bg{
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(-40deg, #1C1E53 -10.96%, rgba(28, 30, 83, 0.42) 103.96%);
+            padding: 50px 44px;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-end;
+            h3{
+                font-size: 24px;
+                line-height: 36px;
+                color: $white-color;
+                max-width: 270px;
+                margin-bottom: 10px;
+            }
+        }
+        &_card__two{
+            max-width: 405px;
+            width: 100%;
+            height: 284px;
+            background-image: url(../../images/home/home_Card_3.png);
+            background-size: contain;
+            background-position: cover;
+            background-repeat: no-repeat;
+        }
+    }
+}
+
+
+@include for-large-desktop(){
+    .building{
+        &_text{
+            h1{
+                font-size: 44px;
+                line-height: 60px;
+                max-width: 400px;
+            }
+        }
+    }
+}
+
+@include for-large-tablet(){
+    .building{
+        flex-direction: column;
+        &_text{
+            align-items: center;
+            text-align: center;
+            max-width: 630px;
+            h1{
+                max-width: 540px;
+                text-align: center;
+            }
+        }
+    }
+}
+
+
+@include for-tablet(){
+    .building{
+        &_text{
+            max-width: 500px;
+            h1{
+                font-size: 36px;
+                line-height: 44px;
+                max-width: 450px;
+            }
+        }
+    }
+    .home_project{
+        .project{
+            &_bigcard{
+                max-width: 505px;
+                height: 324px;
+                &__text{
+                    max-width: 505px;
+                    width: 100%;
+                    p{
+                        margin: 10px 0 20px 0;
+                    }
+                }
+            }
+            &_cards{
+                flex-direction: column;
+                align-items: center;
+            }
+            &_card{
+                max-width: 505px;
+                width: 100%;
+            }
+        }
+    }
+}
+
+@include for-large-tablet{
+    .home_setion{
+        padding: 80px 0;
+    }
+    .building{
+        &_text{
+            max-width: 370px;
+            h1{
+                font-size: 28px;
+                line-height: 38px;
+            }
+        }
+    }
+}
+
+@include for-mobile(){
+    .building{
+        &_btns{
+            flex-direction: column;
+        }
+    }
+}
