--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -6,6 +6,7 @@
     background-color: $dark-blue-color;
     border: 1px solid transparent;
     transition: .3s;
+    color: $grey-color;
     &:hover{
         background-color: transparent;
         border-color: $dark-blue-color;
