--- a/scss/pages/_contact.scss
+++ b/scss/pages/_contact.scss
@@ -1,5 +1,8 @@
 // 
 .contact{
+    padding: 80px 0;
+    @include flex-items;
+    flex-direction: column;
     h1{
         text-align: center;
         margin-top: 72px;
@@ -15,60 +18,65 @@
     p{
         text-align: center;
         color: #696A74;
+        max-width: 560px;
     }
 
     .form{
-        @include flex-items;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        max-width: 1061px;
-        height: 640px;
-        margin-left: 100px;
-        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
         border: 1px solid #F4F6FC;
         border-radius: 12px;
         background: var(--Grey, #F4F6FC);
-        padding: 50px 70px;
+        padding: 50px 70px 70px 70px;
+        max-width: 1061px;
+        width: 100%;
+        margin: 60px auto;
         gap: 32px;
-
-        label{
-            max-width: 438px;
+        .box{
             width: 100%;
-            display: flex;
-            align-items: flex-start;
-            flex-direction: column;
-            h4{
-                margin-bottom: 10px;
-                color: black;
-            }
+            @include flex-items;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            gap: 32px;
+            
 
-            input{
+            label{
+                max-width: 438px;
                 width: 100%;
-                height: 64px;
-                display: inline-flex;
-                padding: 18px 32px;
+                display: flex;
                 align-items: flex-start;
-                gap: 10px;
-                border: 1px solid #D6D8DD;
-                border-radius: 8px;
-                background-color: #F4F6FC;
+                flex-direction: column;
+                h4{
+                    margin-bottom: 10px;
+                    color: black;
+                }
+
+                input{
+                    width: 100%;
+                    display: inline-flex;
+                    padding: 24px 32px;
+                    align-items: flex-start;
+                    gap: 10px;
+                    border: 1px solid #D6D8DD;
+                    border-radius: 8px;
+                    background-color: #F4F6FC;
+                    outline: none;
+                }
             }
-
-        .message{
-            display: flex;
-            width: 908px;
-            height: 138px;
-            padding: 18px 32px;
-            align-items: flex-start;
-            gap: 10px;
-            flex-shrink: 0;
-        }    
-
-        button{
-            width: 200px;
-            height: 50px;
-        }
-
+            .message{
+                max-width: 908px;
+                width: 100%;
+                .textarea{
+                    width: 100%;
+                    padding: 20px;
+                    border-radius: 8px;
+                    outline: none;
+                    background: transparent;
+                    height: 140px;
+                    border-color: #0000001F;
+                }
+            }
         }
 
 
