--- a/css/style.css
+++ b/css/style.css
@@ -400,6 +400,11 @@ footer {
   flex-direction: column;
   align-items: flex-start;
   justify-content: flex-end;
+  transition: 0.4s;
+  border-radius: 10px;
+}
+.home_design .design_card:hover {
+  box-shadow: 0 0 10px 10px rgba(192, 192, 192, 0.1960784314);
 }
 .home_design .design_card span {
   width: 35px;
