--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -208,6 +208,11 @@
             flex-direction: column;
             align-items: flex-start;
             justify-content: flex-end;
+            transition: .4s;
+            border-radius: 10px;
+            &:hover{
+                box-shadow: 0 0 10px 10px #c0c0c032;
+            }
             span{
                 width: 35px;
                 height: 35px;
